--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
         href="https://fonts.googleapis.com/css2?family=Molengo&family=Mulish&family=Open+Sans&family=Raleway&display=swap"
         rel="stylesheet">
     <link rel="shortcut icon" href="img/football.webp" type="image/x-icon">
-    <link rel="apple-touch-icon" href="icons/soccer.png">
-    <link rel="apple-touch-icon" href="icons/soccers.png">
-    <link rel="apple-touch-icon" href="icons/soccert.png">
+    <link rel="apple-touch-icon" href="icons/maskable_icon_512.png">
+    <link rel="apple-touch-icon" href="icons/maskable_icon_192.png">
     <title>Football</title>
 </head>
 
